fix styling on mobile of collection container

--- a/src/components/collection/collection-projects-player.styl
+++ b/src/components/collection/collection-projects-player.styl
@@ -46,7 +46,7 @@
   align-self: flex-start
   padding: 8px 0 0
   flex-grow: 1
-  margin: 0 20px
+  margin: 0 10px
   text-align: right
   &.dark
     color: white
